# The-Small-POS

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  PARITY_CHECKLIST.md  PARITY_GATES.md  PHASE2_NOTES.md  PHASE4_NOTES.md  PHASE8_COMPLETE.md  PHASE8_SUMMARY.md  POS-80  README.md  RELEASE.md  SECURITY-HARDENING-COMPLETE.md  SUPPORT.md  USB001  check-driver-orders.html  diagnose-stuck-earnings.sql  fix-all-unsynced.html  fix-order-564774.html  fix-sync.html  force-sync-orders.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.js  reset-admin-url.js  reset-admin-url.ps1  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  update-order-564774.sql  update-order-address.sql  updater.key.pub  vite.config.ts  webpack.main.config.js  webpack.renderer.config.js
.agent/: implementation_plan_inter_terminal_sync.md
.github/workflows/: release.yml
docs/: 00-START-HERE.md  README.md  gap-review-2026-07-10.md  live-pos-qa-suggestions.md  offline-store-schema-and-migrations.md  offline-sync-telemetry-qa.md  receipt-printing-2026.md  sync-recovery-recipes.md
docs/architecture/: 01-OVERVIEW.md  02-SYNC-SERVICES.md  03-REFACTORING-ANALYSIS.md  ARCHITECTURE.md  COMPLETE_ARCHITECTURE_OLD.md  REFACTORED_ARCHITECTURE.md
docs/development/: MODAL_MIGRATION_GUIDE.md  POS_COMPONENT_LIBRARY.md
docs/guides/: OTA_UPDATES.md  SCREEN-CAPTURE.md  api-keys.md  module-integration.md  pin-setup.md  printer-setup.md  run-electron-app.md
docs/reference/: API-ENDPOINTS.md  quick-reference.md
docs/security-native-migration/: AUDIT_REPORT.md  EXECUTION_BACKLOG.md  FILE_MATRIX.csv  NATIVE_MIGRATION_RFC.md  README.md  SECURITY_VERIFICATION_PACK.md  STAGING_SOAK_RUNBOOK.md
docs/testing/: OTA_TESTING.md
docs/w4-planning/: 4b-read-path.md  4c-write-path.md  4d-wire-format.md  4e-drop-columns.md  dependencies.md  inventory.md
planning/: POS_UI_POLISH_TASKS.md
public/: index.html
scripts/: _defaults.json  _harvest_defaults.cjs  add-is-banned-column.js  check-dev-port.mjs  check-locale-parity.mjs  check-native-bootstrap.mjs  check-no-electron-surfaces.mjs  check-parity-contract.mjs  clear-local-orders.js  clear-local-orders.sql  evaluate-soak-report.mjs  extract-changelog-section.mjs  generate-updater-manifest.mjs  reconcile-el-extras.mjs  reset-pin.js  run-parity-tests.mjs  run-support-tests.mjs  smoke-test.ps1  tauri-smoke.mjs  verify-diagnostics.mjs  verify-rust.ps1  verify-rust.sh  verify-supabase-schema-mcp.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  auth.rs  business_day.rs  core_helpers.rs  customer_display.rs  data_helpers.rs  db.rs  diagnostics.rs  drawer.rs  escpos.rs  hardware_manager.rs  idempotency.rs  incident_reporting.rs  lib.rs  loyalty.rs  main.rs  menu.rs  money.rs  order_ownership.rs  panic_hook.rs  payment_integrity.rs  payments.rs  print.rs  printers.rs  receipt_renderer.rs  recovery.rs  refunds.rs  reset.rs  scale.rs  scanner.rs  serial.rs  shifts.rs  storage.rs  sync.rs  sync_queue.rs  terminal_helpers.rs  zreport.rs
src-tauri/src/callerid/: manager.rs  mod.rs  sip_listener.rs  sip_parser.rs  types.rs
src-tauri/src/commands/: address_offline.rs  analytics.rs  api_bridge.rs  auth.rs  branch_data.rs  callerid.rs  customers.rs  diagnostics.rs  ecr.rs  hardware.rs  loyalty.rs  menu.rs  mod.rs  modules.rs  offline_mutations.rs  orders.rs  payments.rs  print.rs  recovery.rs  runtime.rs  settings.rs  shifts.rs  sync.rs  sync_queue.rs  system_ui.rs  updates.rs  zreports.rs
src-tauri/src/ecr/: device_manager.rs  fiscal.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/ecr/protocols/: generic_fiscal.rs  mod.rs  pax.rs  zvt.rs
src-tauri/src/fiscal/: active_cache.rs  close_day_guard.rs  dispatcher.rs  mod.rs  payload_builder.rs  replay.rs  sequence_counter.rs
src-tauri/src/tests/: fake_http.rs  fake_keyring.rs  harness.rs  mod.rs  parity_g13.rs  parity_g14.rs  parity_g7.rs  parity_g8.rs  w4c_dual_write_smoke.rs
src-tauri/tests/: fiscal_dispatcher_test.rs  w5_s7_legacy_producer_seal.rs
src/__tests__/: posIntegration.property.test.ts
src/config/: environment.ts  payment-config.ts
src/lib/: electron-compat.ts  event-bridge.ts  i18n.ts  index.ts  ipc-adapter.ts  ipc-contracts.ts  payment-integrity.ts  platform-detect.ts  update-contracts.ts
src/locales/: bundles.ts  de.json  el.json  en.json  fr.json  it.json
src/main/: admin-dashboard-sync-service.ts  api-sync.ts  app-menu.ts  auth-handlers.ts  auth-service.ts  auto-updater.ts  database-schema.sql  database.ts  electron-shim.js  index.ts  main.ts  order-handlers.ts  payment-sync-queue.ts  preload.ts.backup  service-registry.ts  staff-auth-handlers.ts  staff-auth-service.ts  sync-service.ts  window-manager.ts
src/preload/: index.ts  ipc-security.ts
src/renderer/: App.tsx  index.tsx  polyfills.ts  tsconfig.json
src/services/: BranchMenuFilterService.ts  DeliveryZoneValidator.ts  OrderService.ts  RealtimeCustomerHandler.ts  RealtimeOrderHandler.ts  printer-service.ts
src/shared/: constants.ts  feature-mapping.ts  index.ts  supabase-config.ts  supabase.ts
src/tests/: customer-address-sync.property.test.ts  job-routing.property.test.ts  (+43 more)
(+757 files in other folders)
