[package]
name = "the-small-pos"
version = "1.2.0"
description = "The Small POS - Desktop point-of-sale (Tauri v2)"
authors = ["The Small Team <dev@thesmall.app>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "the_small_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = [
  "tray-icon",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# SQLite (bundled so no system dep needed)
rusqlite = { version = "0.32", features = ["bundled", "trace"] }

# HTTP client (for admin dashboard API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Secure credential storage (replaces Electron safeStorage)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# PIN hashing
bcrypt = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Compression for sync payloads
zstd = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Diagnostics export (zip bundle)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Error handling
thiserror = "2"
anyhow = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
