[package]
name = "the-small-pos"
version = "1.4.14"
description = "The Small POS - Desktop point-of-sale (Tauri v2)"
authors = ["The Small Team <dev@thesmall.app>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "the_small_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2", features = [
  "tray-icon",
] }
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
rusttype = "0.9"

# SQLite (bundled so no system dep needed)
rusqlite = { version = "0.32", features = ["bundled", "trace"] }

# HTTP client (for admin dashboard API)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Secure credential storage (replaces Electron safeStorage)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# PIN hashing
bcrypt = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"

# Compression for sync payloads
zstd = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Diagnostics export (zip bundle)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Serial port (scales, serial barcode scanners, customer displays)
serialport = "4"

# Secure memory clearing for secrets
zeroize = "1"

# Error handling
thiserror = "2"
anyhow = "1"
webbrowser = "1.0"

# URL encoding (W11 Item 7 deferred follow-up). Replaces the hand-rolled
# `.replace()` chain in `core_helpers::build_admin_query::enc()` with the
# RFC 3986-compliant `url::form_urlencoded::byte_serialize`. Already present
# transitively via reqwest; this declares it as a direct dep so we can `use`
# it without depending on reqwest's transitive surface.
url = "2"

[dev-dependencies]
# Test-level serialization for tests that touch process-global state (OS keyring
# via storage::set_credential, etc.). Prevents flaky failures caused by parallel
# test threads racing on the same global resource.
serial_test = "3"

# Wave 5 Session 7 PR 1 — AST walker for the legacy-producer seal test at
# tests/w5_s7_legacy_producer_seal.rs. `syn` parses each `src/**/*.rs` file so
# the seal can skip `#[cfg(test)]` / `#[test]` subtrees instead of
# false-positiving on the test fixtures that deliberately seed the legacy
# `sync_queue` table (those fixtures pin the dual-queue transitional-reader
# contract during the bake window before migration v56 drops the table).
# `proc-macro2` with `span-locations` makes `Span::start().line` return real
# source positions so failure messages are actionable.
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
